# cyscale

./: README.md  pyproject.toml  setup.py
.github/workflows/: deploypypi.yml  unittests.yml
benchmarks/: bench.py
scalecodec/: __init__.py  _compact.c  _primitives.c  _primitives.pyx  _scale_bytes.c  base.c  base.pyi  base.pyx  types.pyi  types.pyx
scalecodec/utils/: _math.c  math.py
test/: test_legacy_events.py  test_metadata.py
