[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyscale"
version = "0.2.2"
description = "Cython SCALE Codec Library"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "BD Himes", email = "b@latent.to" },
]
keywords = ["scale", "codec", "polkascan", "polkadot", "substrate", "blockchain", "kusama", "cython", "bittensor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
]
requires-python = ">=3.10"
dependencies = [
    "more-itertools",
    "base58>=2.0.1",
    "requests>=2.24.0",
]

[project.optional-dependencies]
test = ["coverage", "pytest"]
cython = ["Cython>=3.0"]

[project.urls]
Homepage = "https://github.com/thewhaleking/cy-scale-codec"
"Bug Reports" = "https://github.com/thewhaleking/cy-scale-codec/issues"
Source = "https://github.com/thewhaleking/cy-scale-codec"

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "tests", "test"]

[tool.setuptools.package-data]
"scalecodec.type_registry" = ["*.json"]
"scalecodec" = ["*.pyi", "py.typed"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "setuptools>=82.0.1",
]
